--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
                         <h1>Thoughts and&nbsp;words</h1>
                         <article class="top__article-item">
                             <div class="top__article-item--img">
-                                <a href="#" title="cards"><img src="assets/images/img-top.png" alt="article"></a>
+                                <a href="cards.html" title="cards"><img src="assets/images/img-top.png" alt="article"></a>
                             </div>
                             <div class="top__article-item--text">
                                 <div class="article-item__info">
